--- a/apps/front/src/app/main/sample/sample.component.html
+++ b/apps/front/src/app/main/sample/sample.component.html
@@ -1,5 +1,4 @@
 <div class="page-layout blank p-24" fusePerfectScrollbar>
-
-    <h2>{{'SAMPLE.HELLO' | translate}}</h2>
-
+  <h2>{{ 'SAMPLE.HELLO' | translate }}</h2>
+  <h3>Subindo para o SURGE</h3>
 </div>
